--- a/src/main/resources/static/css/notifications/eventList.css
+++ b/src/main/resources/static/css/notifications/eventList.css
@@ -1,7 +1,10 @@
 /* 페이지 전체 너비 제한 */
 .container {
-    max-width: 1100px;
-    margin: 0 auto;
+        flex: 1; /* 이 부분을 추가하여 컨테이너가 남은 공간을 채우도록 설정 */
+        max-width: 1100px;
+        background-color: white;
+        padding: 20px;
+        margin: 40px auto;
 }
 
 /* 배너 스타일링 */
