누락된 } 추가

--- a/src/main/resources/static/css/contest/ContestPay2.css
+++ b/src/main/resources/static/css/contest/ContestPay2.css
@@ -37,6 +37,7 @@
         }
         .btn:hover {
             background-color: #0056b3;
+        }
         .apibtn {
             display: inline-block;
             padding: 10px 20px;
