리팩터: 카카오페이 결제 API를 포트원으로 변경

--- a/src/main/resources/templates/contest/ContestPay2.html
+++ b/src/main/resources/templates/contest/ContestPay2.html
@@ -36,6 +36,12 @@
             <a href="javascript:history.back()" class="btn btn-back">이전</a>
             <a href="/contest/payment/submit" class="apibtn">결제하기</a>
         </div>
+
+<!--        <div>-->
+<!--            <button>테스트</button>-->
+<!--            <script src="https://cdn.portone.io/v2/browser-sdk.js"></script>-->
+<!--            <script src="/ContestPay2.js"></script>-->
+<!--        </div>-->
     </form>
 </div>
 
