--- a/src/main/resources/templates/list/main.html
+++ b/src/main/resources/templates/list/main.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
-      layout:decorate="/fragments/layout">
+      layout:decorate="~{/fragments/layout}">
 
 <head>
     <meta charset="UTF-8">
@@ -25,11 +25,32 @@
     <main>
         <div class="mainWarap">
             <div class="banner">
-                <div class="bannerContent">
+                <div class="bannerContent active">
                     <div class="bannerTitle">D'OH!!</div>
-                    <div class="bannerText">감탄할만한 기발한 네이밍 센스 여기 다 있다!</div>
+                    <div class="bannerText">“감탄할만한 기발한 네이밍 센스 여기 다 있다!”</div>
+                    <a href="#">링크</a>
                 </div>
-            </div><!--banner 끝-->
+                <div class="bannerContent">
+                    <div class="bannerTitle">명절 관련 내용</div>
+                    <div class="bannerText">"즐거운 명절, 창의적인 네이밍으로 더 특별하게!”</div>
+                    <a href="#">링크</a>
+                </div>
+                <div class="bannerContent">
+                    <div class="bannerTitle">포폴 상세에서 채팅 기능 가능</div>
+                    <div class="bannerText">"작품에 대해 더 알고 싶으신가요? 채팅으로 바로 대화해보세요!”</div>
+                    <a href="#">링크</a>
+                </div>
+                <div class="bannerContent">
+                    <div class="bannerTitle">이벤트</div>
+                    <div class="bannerText">"이벤트 참여하고 나만의 멋진 이름을 만들어보세요. 우승하면 푸짐한 상금까지!”</div>
+                    <a href="#">링크</a>
+                </div>
+            </div>
+            <div class="banner-controls">
+                <button class="prev">이전</button>
+                <button class="next">다음</button>
+            </div>
+
 
             <div class="section A">
                 <div class="title">요즘 인기 있는 콘테스트</div>
