배너 정보 추가
배너 정보 추가

--- a/src/main/resources/templates/list/main.html
+++ b/src/main/resources/templates/list/main.html
@@ -27,22 +27,22 @@
             <div class="banner">
                 <div class="bannerContent active">
                     <div class="bannerTitle">D'OH!!</div>
-                    <div class="bannerText">“감탄할만한 기발한 네이밍 센스 여기 다 있다!”</div>
+                    <div class="bannerText">감탄할만한 기발한 네이밍 센스 여기 다 있다!</div>
                     <a href="#">링크</a>
                 </div>
                 <div class="bannerContent">
-                    <div class="bannerTitle">명절 관련 내용</div>
-                    <div class="bannerText">"즐거운 명절, 창의적인 네이밍으로 더 특별하게!”</div>
+                    <div class="bannerTitle">D'OH!!</div>
+                    <div class="bannerText">감탄할만한 기발한 네이밍 센스 여기 다 있다!</div>
                     <a href="#">링크</a>
                 </div>
                 <div class="bannerContent">
-                    <div class="bannerTitle">포폴 상세에서 채팅 기능 가능</div>
-                    <div class="bannerText">"작품에 대해 더 알고 싶으신가요? 채팅으로 바로 대화해보세요!”</div>
+                    <div class="bannerTitle">D'OH!!</div>
+                    <div class="bannerText">감탄할만한 기발한 네이밍 센스 여기 다 있다!</div>
                     <a href="#">링크</a>
                 </div>
                 <div class="bannerContent">
-                    <div class="bannerTitle">이벤트</div>
-                    <div class="bannerText">"이벤트 참여하고 나만의 멋진 이름을 만들어보세요. 우승하면 푸짐한 상금까지!”</div>
+                    <div class="bannerTitle">D'OH!!</div>
+                    <div class="bannerText">감탄할만한 기발한 네이밍 센스 여기 다 있다!</div>
                     <a href="#">링크</a>
                 </div>
             </div>
