--- a/src/main/resources/static/css/user/login.css
+++ b/src/main/resources/static/css/user/login.css
@@ -1,83 +1,75 @@
-/* .login-wrapper을 사용하여 가운데 정렬 유지 */
-.login-wrapper {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-    background-color: #f7f7f7;
-}
 
+body {
+font-family: Arial, sans-serif;
+display: flex;
+justify-content: center;
+align-items: center;
+height: 100vh;
+margin: 0;
+background-color: #f7f7f7;
+}
 .login-container {
-    background-color: white;
-    padding: 40px;
-    border-radius: 20px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    width: 350px;
-    text-align: center;
+background-color: white;
+padding: 40px;
+border-radius: 20px;
+box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+width: 350px;
+text-align: center;
 }
-
 .login-container h1 {
-    font-size: 32px;
-    margin-bottom: 20px;
+font-size: 32px;
+margin-bottom: 20px;
 }
-
 .login-container input[type="email"],
 .login-container input[type="password"] {
-    width: 100%;
-    padding: 13px;
-    margin: 10px 0;
-    border-radius: 5px;
-    border: 1px solid #ccc;
-    box-sizing: border-box;
+width: 100%;
+padding: 13px;
+margin: 10px 0;
+border-radius: 5px;
+border: 1px solid #ccc;
+box-sizing: border-box;
 }
-
 .login-container button {
-    width: 100%;
-    padding: 10px;
-    margin-top: 20px;
-    background-color: black;
-    color: white;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-    font-size: 16px;
+width: 100%;
+padding: 10px;
+margin-top: 20px;
+background-color: black;
+color: white;
+border: none;
+border-radius: 5px;
+cursor: pointer;
+font-size: 16px;
 }
-
 .login-container input[type="text"],
 .login-container input[type="password"] {
-    width: 100%;
-    padding: 13px;
-    margin: 10px 0;
-    border-radius: 5px;
-    border: 1px solid #ccc;
-    box-sizing: border-box;
-}
+     width: 100%;
+     padding: 13px;
+     margin: 10px 0;
+     border-radius: 5px;
+     border: 1px solid #ccc;
+     box-sizing: border-box;
+ }
 
 .login-container .sns-login {
-    margin: 20px 0;
+margin: 20px 0;
 }
-
 .login-container .sns-login img {
-    width: 30px;
-    margin: 0 10px;
-    cursor: pointer;
+width: 30px;
+margin: 0 10px;
+cursor: pointer;
 }
-
 .login-container .forgot-password {
-    margin-top: 20px;
-    font-size: 14px;
+margin-top: 20px;
+font-size: 14px;
 }
-
 .login-container .forgot-password a {
-    color: #000;
+color: #000;
 }
-
-#loginButton:hover {
-    background-color: #313131;
+#loginButton:hover{
+background-color: #313131;
 }
-
-.email, .password {
-    text-align: left;
-    width: 100%;
-    margin: 1px 0px;
+.email, .password{
+text-align: left;
+width: 100%;
+margin: 1px 0px;
 }
