--- a/src/main/resources/templates/user/login.html
+++ b/src/main/resources/templates/user/login.html
@@ -9,7 +9,7 @@
 <body>
 
     <div class="login-container">
-        <form method="post" action="/login" enctype="multipart/form-data">
+        <form method="post" action="/users/login" enctype="multipart/form-data">
         <div class="email">이메일</div>
 <!--        <input type="text" id="email" name="userEmail" required>-->
         <input type="text" id="email" name="username" required>
@@ -23,7 +23,7 @@
             <img th:src="@{/img/fragments/naverLogo.png}" alt="naver Logo" width="30px" height="30px">
         </div>
         <div class="forgot-password">
-            아직 회원이 아니세요? <a th:href="@{/register}">회원가입 하기</a>
+            아직 회원이 아니세요? <a th:href="@{/users/register}">회원가입 하기</a>
         </div>
         </form>
     </div>
