--- a/src/main/resources/templates/user/register.html
+++ b/src/main/resources/templates/user/register.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <div class="signup-container">
-    <form action="/register" method="post" enctype="multipart/form-data">
+    <form action="/users/register" method="post" enctype="multipart/form-data">
     <img th:src="@{/img/fragments/logoGG.png}" alt="D'OH Logo" width="150px" height="75px">
     <h2>이메일 가입하기</h2>
     <label for="email">이메일 주소</label>
