시큐리티 공지사항 admin 경로 설정

--- a/src/main/resources/templates/notifications/noticeList.html
+++ b/src/main/resources/templates/notifications/noticeList.html
@@ -87,7 +87,7 @@
 
         <!-- 등록 버튼 -->
         <div class="buttons">
-            <a th:href="@{/notice/write}" class="btn">등록</a>
+            <a th:href="@{/notice/admin/write}" class="btn">등록</a>
         </div>
     </div>
 
