--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -25,7 +25,7 @@
         </div>
         <div class="navbar-right">
             <div class="login-links">
-                <a class="nav-link" th:href="@{/login}">로그인</a>
+                <a class="nav-link" th:href="@{/users/login}">로그인</a>
                 <a class="nav-link" th:href="@{/users/register}">회원가입</a>
             </div>
         </div>
