--- a/src/main/resources/templates/list/main.html
+++ b/src/main/resources/templates/list/main.html
@@ -19,38 +19,35 @@
     <link rel="stylesheet" th:href="@{/css/fragments/footer.css}">
     <script th:src="@{/js/list/main.js}"></script>
 
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
-<th:block layout:fragment="content">
-    <main>
-        <div class="mainWarap">
-            <div class="banner">
-                <div class="bannerContent active">
-                    <div class="bannerTitle">D'OH!!</div>
-                    <div class="bannerText">감탄할만한 기발한 네이밍 센스 여기 다 있다!</div>
-                    <a href="#">링크</a>
-                </div>
-                <div class="bannerContent">
-                    <div class="bannerTitle">D'OH!!</div>
-                    <div class="bannerText">감탄할만한 기발한 네이밍 센스 여기 다 있다!</div>
-                    <a href="#">링크</a>
-                </div>
-                <div class="bannerContent">
-                    <div class="bannerTitle">D'OH!!</div>
-                    <div class="bannerText">감탄할만한 기발한 네이밍 센스 여기 다 있다!</div>
-                    <a href="#">링크</a>
-                </div>
-                <div class="bannerContent">
-                    <div class="bannerTitle">D'OH!!</div>
-                    <div class="bannerText">감탄할만한 기발한 네이밍 센스 여기 다 있다!</div>
-                    <a href="#">링크</a>
-                </div>
-            </div>
-            <div class="banner-controls">
-                <button class="prev">이전</button>
-                <button class="next">다음</button>
-            </div>
 
+<th:block layout:fragment="content">
+    <!--swiper-->
+    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+    <main>
+        <div class="mainWrap">
+            <div class="swiper mySwiper">
+                <div class="swiper-wrapper">
+                    <div class="swiper-slide">
+                        <img th:src="@{/img/banner/한가위.png}" alt="Slide 1">
+                    </div>
+                    <div class="swiper-slide">
+                        <img th:src="@{/img/banner/콘테스트.png}" alt="Slide 2">
+                    </div>
+                    <div class="swiper-slide">
+                        <img th:src="@{/img/banner/채팅.png}" alt="Slide 3">
+                    </div>
+<!--                    <div class="swiper-slide">-->
+<!--                        <img th:src="@{/img/banner/또우광고.png}" alt="Slide 4">-->
+<!--                    </div>-->
+                </div>
+
+                <div class="swiper-button-next"></div>
+                <div class="swiper-button-prev"></div>
+                <div class="swiper-pagination"></div>
+            </div>
 
             <div class="section A">
                 <div class="title">요즘 인기 있는 콘테스트</div>
