:sparkles: 포트폴리오 페이지 경로 연결 및 디자이너 문의하기 버튼 클릭 시 채팅방 이동 기능 구현

--- a/src/main/resources/templates/user/portfolioDetail.html
+++ b/src/main/resources/templates/user/portfolioDetail.html
@@ -91,7 +91,11 @@
                             </div>
                         </div>
                     </figure><!--figure-->
-                    <button type="button">디자이너에게 문의하기</button>
+                    <!--임시값으로 aaaa 고정 -->
+                    <!--추후 사용자 닉네임 저장하는 로직 구현되면 닉네임을 쿼리로 넘겨야함 -->
+                    <a href="/users/chat?creator=aaaa">
+                        <button type="button" >디자이너에게 문의하기</button>
+                    </a>
                 </aside><!--sectionInfo-->
             </div><!--mainWrap-->
 
@@ -99,4 +103,4 @@
     </main>
 </th:block>
 
-</html>ml>
+</html>
