버튼 스타일링 하기 & 3초마다 넘어가기
버튼 스타일링 하기 & 3초마다 넘어가기

--- a/src/main/resources/static/css/list/main.css
+++ b/src/main/resources/static/css/list/main.css
@@ -40,10 +40,47 @@ main {
 
 .swiper-slide img {
     display: block;
-    max-width: 100%;
-    max-height: 100%;
+    width: 1200px;
+    height: 464px;
     object-fit: cover;
     margin: auto; /* 추가: 이미지를 가운데 정렬 */
+}
+
+/* 네비게이션 버튼 커스터마이징 */
+
+.swiper-button-next::after, .swiper-button-prev::after {
+    color: black; /* 화살표 색상 */
+    font-size: 20px; /* 화살표 크기 조정 (필요 시) */
+}
+
+.swiper-button-next, .swiper-button-prev {
+    /*color: #757575;  화살표 색상 */
+    width: 50px; /* 버튼 너비 */
+    height: 50px; /* 버튼 높이 */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.swiper-button-next:hover, .swiper-button-prev:hover {
+ color: #757575; /* 화살표 색상 */
+}
+
+/* 페이지네이션 기본 스타일 (비활성화된 상태) */
+.swiper-pagination-bullet {
+    background-color: #757575 !important; /* 기본 회색 */
+    opacity: 1 !important; /* 불릿의 불투명도 */
+    width: 10px !important; /* 불릿 너비 */
+    height: 10px !important; /* 불릿 높이 */
+    margin: 0 4px !important; /* 불릿 사이의 간격 */
+    border-radius: 50% !important; /* 불릿을 원형으로 */
+}
+
+/* 활성화된 불릿 스타일 */
+.swiper-pagination-bullet-active {
+    background-color: #000000 !important; /* 검정색 */
+    width: 12px !important; /* 크기를 조금 더 크게 */
+    height: 12px !important;
 }
 
 .section {
