--- a/src/main/resources/templates/user/portfolioDetail.html
+++ b/src/main/resources/templates/user/portfolioDetail.html
@@ -93,7 +93,7 @@
                     </figure><!--figure-->
                     <!--임시값으로 aaaa 고정 -->
                     <!--추후 사용자 닉네임 저장하는 로직 구현되면 닉네임을 쿼리로 넘겨야함 -->
-                    <a href="/users/chat?creator=aaaa">
+                    <a href="/users/chat?receiver=aaaa">
                         <button type="button" >디자이너에게 문의하기</button>
                     </a>
                 </aside><!--sectionInfo-->
