--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -25,32 +25,36 @@
             </div>
 
             <div class="navbar-right">
-                <div class="login-links">
+                <div class="login-container">
                     <!-- 로그인하지 않은 경우 -->
-                    <div th:if="${userEmail == null or userEmail == 'anonymousUser'}">
-                        <a class="nav-link" th:href="@{/users/login}">로그인</a>
-                        <a class="nav-link" th:href="@{/users/register}">회원가입</a>
+                    <div th:if="${userEmail == null or userEmail == 'anonymousUser'}" class="login-links">
+                        <div class="link-item">
+                            <a class="nav-link" th:href="@{/users/login}">로그인</a>
+                        </div>
+                        <div class="link-item">
+                            <a class="nav-link" th:href="@{/users/register}">회원가입</a>
+                        </div>
                     </div>
 
                     <!-- 로그인한 사용자일 경우 -->
-                    <div th:if="${userEmail != null && userEmail != 'anonymousUser'}">
+                    <div th:if="${userEmail != null && userEmail != 'anonymousUser'}" class="login-links">
                         <!-- 관리자일 경우 -->
-                        <div th:if="${userRole != null && userRole.equals('ROLE_ADMIN')}">
-                            <a class="nav-link">[[${userEmail}]]</a> <!-- 관리자 이메일 표시 -->
+                        <div th:if="${userRole != null && userRole == 'ROLE_ADMIN'}" class="link-item">
+                            <a class="nav-link" th:text="${userEmail}"></a> <!-- 관리자 이메일 표시 -->
                         </div>
 
                         <!-- 일반 사용자일 경우 -->
-                        <div th:if="${userRole != null && userRole.equals('ROLE_USER')}">
-                            <a class="nav-link" th:href="@{/users/mypage}">[[${userEmail}]]</a> <!-- 일반 사용자 이메일 표시 -->
+                        <div th:if="${userRole != null && userRole == 'ROLE_USER'}" class="link-item">
+                            <a class="nav-link" th:href="@{/users/mypage}" th:text="${userEmail}"></a> <!-- 일반 사용자 이메일 표시 -->
                         </div>
 
                         <!-- 로그아웃 링크 (모든 로그인된 사용자에게 표시) -->
-                        <a class="nav-link" th:href="@{/users/logout}">로그아웃</a>
-<!--                        <a class="nav-link" th:href="@{/}">로그아웃</a>-->
+                        <div class="link-item">
+                            <a class="nav-link" th:href="@{/users/logout}">로그아웃</a>
+                        </div>
                     </div>
                 </div>
             </div>
-
         </nav>
     </header>
 </th:block>
