--- a/src/main/resources/templates/list/applicationTerms.html
+++ b/src/main/resources/templates/list/applicationTerms.html
@@ -14,10 +14,10 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- 커스텀 CSS 및 JS 추가 -->
-    <link rel="stylesheet" th:href="@{/css/list/apply_1.css}">
+    <link rel="stylesheet" th:href="@{/css/list/applicationTerms.css}">
     <link rel="stylesheet" th:href="@{/css/fragments/header.css}">
     <link rel="stylesheet" th:href="@{/css/fragments/footer.css}">
-    <script th:src="@{/js/list/apply_1.js}"></script>
+    <script th:src="@{/js/list/applicationTerms.js}"></script>
 
 </head>
 
