--- a/src/main/resources/templates/list/applicationWrite.html
+++ b/src/main/resources/templates/list/applicationWrite.html
@@ -14,10 +14,10 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- 커스텀 CSS 및 JS 추가 -->
-    <link rel="stylesheet" th:href="@{/css/list/apply_2.css}">
+    <link rel="stylesheet" th:href="@{/css/list/applicationWrite.css}">
     <link rel="stylesheet" th:href="@{/css/fragments/header.css}">
     <link rel="stylesheet" th:href="@{/css/fragments/footer.css}">
-    <script th:src="@{/js/list/apply_2.js}"></script>
+    <script th:src="@{/js/list/applicationWrite.js}"></script>
 
 </head>
 <th:block layout:fragment="content">
